# sap-uc3

./: .env  .gitignore  Dockerfile.client_service  Dockerfile.coordination_service  Dockerfile.cs_mock  README.md  UC3_KPIs.xlsx  docker-compose.yml  index.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.debug.yml
.github/workflows/: 01-unittesting.yml  02-coord-int-test.yml  03-build-and-push-coord-image.yml  04-call-client-int-test.yml  05-build-and-push-client-image.yml  06-publish-charts.yml  workflow.yml
charts/client_service/: Chart.yaml  values.yaml
charts/client_service/templates/: configmap.yml  deployment.yml  service.yml
charts/coordination_service/: Chart.yaml  values.yaml
charts/coordination_service/templates/: configmap.yml  deployment.yml  service.yml
charts/csmock/: Chart.yaml  values.yaml
charts/csmock/templates/: configmap.yml  coredns-update-job.yaml  custom-coredns-configmap.yaml  deployment.yml  role-binding.yaml  role.yaml  service-account.yaml  service.yml
charts/secure-collab-comp/: Chart.yaml  README.md  values.yaml
charts/secure-collab-comp/templates/: _helpers.tpl  ingress.yaml  smoketest-configmap.yaml  smoketest-job.yaml  smoketest-service.yaml
client_service/: Cargo.toml  Dockerfile  README.md  client-service-0.1.0.tgz  client-service-0.1.1.tgz  client-service-0.1.2.tgz  client-service-0.1.3.tgz  client-service-0.1.4.tgz  client-service-0.1.5.tgz  client-service-0.1.6.tgz  client-service-0.1.7.tgz  docker-compose.yaml  integrationtesting.docker-compose.yaml  lcov.info  startup.sh
client_service/src/: cs_client.rs  cs_config.rs  error.rs  lib.rs  main.rs  netaccess.rs
client_service/src/api/: mod.rs  notify.rs  result.rs  secret_shares.rs  secrets.rs  sys_status.rs  utils.rs
client_service/tests/: test_notify.rs  test_result.rs  test_secrets.rs
client_service/tests/common/: mod.rs
coordination_service/: .env  Cargo.toml  Dockerfile  README.md  coordination-service-0.1.0.tgz  coordination-service-0.1.1.tgz  coordination-service-0.1.2.tgz  coordination-service-0.1.3.tgz  coordination-service-0.1.4.tgz  coordination-service-0.1.5.tgz  coordination-service-0.1.6.tgz  coordination-service-0.1.7.tgz  docker-compose.yaml  integrationtest.docker-compose.yaml  startup.sh
coordination_service/migrations/2024-03-25-141016_init/: down.sql  up.sql
coordination_service/migrations/2024-03-26-104010_results/: down.sql  up.sql
coordination_service/src/: cs_definitions.rs  cs_execute.rs  error.rs  lib.rs  main.rs  notification_service.rs  schema.rs
coordination_service/src/api/: collaboration.rs  config.rs  mod.rs  participation.rs  sys_status.rs
coordination_service/src/db/: collab_ops.rs  csconfig_ops.rs  mod.rs  models.rs  participation_ops.rs
coordination_service/tests/: test_collaboration.rs
coordination_service/tests/common/: mod.rs
cs_interface/: Cargo.toml  README.md
cs_interface/src/: cs_client.rs  cs_config.rs  error.rs  lib.rs  netaccess.rs
cs_mock/: Cargo.toml  Dockerfile  Dockerfile-mpspdz  Dockerfile.backup  README.md  docker-compose.yaml
cs_mock/ephemeral_test/: docker-compose.yaml  kubeconfig.yaml  notes.md
cs_mock/ephemeral_test/configs/: p1.json  p2.json
cs_mock/ephemeral_test/ephemeral/: Dockerfile  go.mod  go.sum  main.go
cs_mock/mpspdz/: Dockerfile  client-interface.py  docker-compose.yaml  execute.sh  kubeconfig.yaml
cs_mock/mpspdz-2/: Dockerfile  client-interface.py  docker-compose.yaml  execute.sh  send_data.py
cs_mock/mpspdz-2/scripts/: compile.bash
cs_mock/mpspdz-2/senddata/: Cargo.toml
cs_mock/mpspdz-2/source/: secure-comparison.mpc
cs_mock/mpspdz/scripts/: setup.bash
cs_mock/mpspdz/source/: secure-comparison.mpc
cs_mock/scripts/: run_mpc.bash  setup.bash
cs_mock/src/: computation.rs  main.rs
cs_mock/src/api/: amphora.rs  ephemeral.rs  logmiddleware.rs  mod.rs  utils.rs
csmock/: csmock-0.1.0.tgz  csmock-0.1.1.tgz  csmock-0.1.2.tgz  csmock-0.1.3.tgz  csmock-0.1.4.tgz  csmock-0.1.5.tgz  csmock-0.1.6.tgz  csmock-0.1.7.tgz
logs/: method_1.json  method_2.json  method_3_accuracy_eval_simulated_mpc.json
secure-collab-comp/: secure-collab-computation-0.1.0.tgz  secure-collab-computation-0.1.1.tgz  secure-collab-computation-0.1.2.tgz  secure-collab-computation-0.1.3.tgz  secure-collab-computation-0.1.4.tgz  secure-collab-computation-0.1.5.tgz  secure-collab-computation-0.1.6.tgz  secure-collab-computation-0.1.7.tgz
smoketesting/: Dockerfile  README.md  csconfig  csconfig-cs  mpc_program.mpc  output_party_mock.py  requirements.txt  smoketesting.py  test_results.csv  testdata.csv
