[package]
name = "client_service"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "client_service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "3.1.6"
poem-openapi = { version = "5.1.5", features = ["swagger-ui"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.216"
serde_json = "1.0.133"
sysinfo = "0.33.0"
reqwest = "0.12.12"
mockall = "0.13.1"
derive_more = {version = "1.0.0", features = ["from"]}
lazy_static = "1.5.0"
thiserror = "2.0.11"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.15.0"
tokio-test = "0.4.4"

[dev-dependencies.reqwest]
version = "0.12.12"
features = [ "json", "multipart", "blocking" ]

[dev-dependencies.poem]
version = "3.1.6"
features = [ "test" ]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
