[package]
name = "cs_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = "0.13.1"
serde = "1.0.216"
serde_json = "1.0.133"
reqwest = "0.12.12"
thiserror = "2.0.11"
poem-openapi = { version = "5.1.5", default-features = false }
lazy_static = "1.5.0"
tracing = "0.1.41"
jni = {version = "0.21.1", features = ["invocation"]}
tempfile = "3.15.0"
base64 = "0.22.1"

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"

[dev-dependencies.reqwest]
version = "0.12.12"
features = [ "json", "multipart", "blocking" ]