[package]
name = "cs-mock"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "cs-mock"
path = "src/main.rs"

[dependencies]
poem = "1.2"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
num-bigint = "0.4.3"
rand = "0.8.5"
bytes = "1.3.0"
num-integer = "0.1.45"
once_cell = "1.19.0"
base64 = "0.22.1"